--- a/.github/workflows/build-pcsx-rearmed.yml
+++ b/.github/workflows/build-pcsx-rearmed.yml
@@ -1,4 +1,4 @@
-name: Build pcsx_rearmed for Dingux (mips32)
+name: Build pcsx_rearmed for Dingux (mips32) (No GPU)
 
 on:
   push:
@@ -52,18 +52,36 @@ jobs:
             echo "❌ libretro-pcsx_rearmed目录不存在"
           fi
 
-      - name: Set cross-compile env for Dingux mips32
+      - name: Set cross-compile env for Dingux mips32 (No GPU)
         run: |
+          # 核心修改：添加禁用GPU/OpenGL/GLES的宏定义，强制软件渲染
           echo "CC=mipsel-linux-gnu-gcc" >> $GITHUB_ENV
           echo "CXX=mipsel-linux-gnu-g++" >> $GITHUB_ENV
           echo "AR=mipsel-linux-gnu-ar" >> $GITHUB_ENV
           echo "RANLIB=mipsel-linux-gnu-ranlib" >> $GITHUB_ENV
-          echo "CFLAGS=-march=mips32 -mabi=32 -mtune=mips32 -O2 -fPIC -DDINGUX=1" >> $GITHUB_ENV
-          echo "CXXFLAGS=-march=mips32 -mabi=32 -mtune=mips32 -O2 -fPIC -DDINGUX=1" >> $GITHUB_ENV
+          echo "CFLAGS=-march=mips32 -mabi=32 -mtune=mips32 -O2 -fPIC -DDINGUX=1 \
+            -DNO_GPU=1 -DNO_OPENGL=1 -DNO_GLES=1 -DNO_GLES2=1 -DUSE_SOFTWARE_RENDERER=1" >> $GITHUB_ENV
+          echo "CXXFLAGS=-march=mips32 -mabi=32 -mtune=mips32 -O2 -fPIC -DDINGUX=1 \
+            -DNO_GPU=1 -DNO_OPENGL=1 -DNO_GLES=1 -DNO_GLES2=1 -DUSE_SOFTWARE_RENDERER=1" >> $GITHUB_ENV
           echo "LDFLAGS=-march=mips32 -mabi=32 -mtune=mips32 -fPIC" >> $GITHUB_ENV
-          env | grep -E "(CC|CXX|CFLAGS|DINGUX)"
+          # 调试：打印关键环境变量
+          env | grep -E "(CC|CXX|CFLAGS|DINGUX|NO_GPU|SOFTWARE_RENDERER)"
 
-      - name: Build pcsx_rearmed for Dingux mips32
+      - name: Patch pcsx_rearmed Makefile (Disable GPU features)
+        run: |
+          cd libretro-super/libretro-pcsx_rearmed
+          # 额外兜底：直接修改Makefile，强制关闭GPU相关编译分支
+          # 1. 注释掉所有GPU/GL相关的编译选项
+          sed -i '/OPENGL/d' Makefile || echo "Makefile中无OPENGL相关行"
+          sed -i '/GLES/d' Makefile || echo "Makefile中无GLES相关行"
+          sed -i '/GPU/d' Makefile || echo "Makefile中无GPU相关行"
+          # 2. 强制启用软件渲染
+          sed -i 's/^#*USE_SOFTWARE_RENDERER=0/USE_SOFTWARE_RENDERER=1/' Makefile || echo "未找到软件渲染开关"
+          # 调试：打印修改后的Makefile关键行
+          echo "===== Makefile中软件渲染相关配置 ====="
+          grep -E "(SOFTWARE_RENDERER|GPU|OPENGL|GLES)" Makefile || echo "无相关配置"
+
+      - name: Build pcsx_rearmed for Dingux mips32 (No GPU)
         run: |
           cd libretro-super
           # 先确认源码目录存在再编译
@@ -71,17 +89,20 @@ jobs:
             echo "❌ 源码目录不存在，编译终止"
             exit 1
           fi
+          # 核心：明确指定仅编译软件渲染版本，禁用GPU加速
+          export FORCE_SOFTWARE_RENDERER=1
+          export DISABLE_GPU=1
           # 开启详细日志编译
           VERBOSE=1 ./libretro-build.sh pcsx_rearmed
-          # 调试：查找.so文件
+          # 调试：查找所有编译生成的.so文件
           echo "===== 查找所有编译生成的.so文件 ====="
-          find . -name "*.so" -type f
+          find . -name "*.so" -type f -ls
           ls -la ./libretro-pcsx_rearmed/ || echo "libretro-pcsx_rearmed目录仍不存在"
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: pcsx_rearmed-dingux-mips32
+          name: pcsx_rearmed-dingux-mips32-no-gpu
           path: |
             libretro-super/libretro-pcsx_rearmed/pcsx_rearmed_libretro.so
             libretro-super/dist/unix/pcsx_rearmed_libretro.so
